# point-within-triangle-test

./: CMakeLists.txt  DataReader.cpp  DataReader.h  README.md  TriangleIntersections.cpp  TriangleIntersections.h  main.cpp  points.txt
